--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ li {
   list-style: none;
 }
 
-/* header {
-  background-color: aqua;
-} */
+a {
+  text-decoration: none;
+  color: black; /* <--- Ver cor depois */
+}
