--- a/style.css
+++ b/style.css
@@ -1,21 +1,14 @@
-html,
 body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-h1,
-ul,
-li {
-  margin: 0;
-}
-
-li {
-  list-style: none;
+  max-width: 80vw;
+  margin: 0 auto;
 }
 
 a {
   text-decoration: none;
   color: black; /* <--- Ver cor depois */
+}
+
+header,
+.hero-container {
+  background-color: #1f2937;
 }
