--- a/style.css
+++ b/style.css
@@ -1,14 +1,86 @@
 body {
-  max-width: 80vw;
-  margin: 0 auto;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-direction: column;
 }
 
 a {
   text-decoration: none;
-  color: black; /* <--- Ver cor depois */
+  color: #f9faf8;
 }
 
-header,
-.hero-container {
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: ;
+}
+
+h1 {
+  font-size: 34px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+/* ---HEADER----------------------------------------- */
+
+header {
   background-color: #1f2937;
+  display: flex;
+  justify-content: center;
+}
+
+.header-container {
+  width: 80vw;
+  padding: 1em;
+  color: #f9faf8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-container nav ul {
+  display: flex;
+}
+
+.header-container a {
+  padding: 1em;
+}
+
+/* ---HERO------------------------------------------- */
+
+.hero-container {
+  display: flex;
+  background: #1f2937;
+  color: #f9faf8;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+
+  width: 100vw;
+}
+
+.hero-call {
+  display: flex;
+  gap: 1em;
+  width: 80vw;
+}
+
+.hero-call button {
+  background-color: #3882f6;
+  border: none;
+  color: #f9faf8;
+  width: 100px;
+  padding: 10px 14px;
+  border-radius: 0.4em;
+}
+
+.hero-container img {
+  margin-bottom: 2em;
 }
