--- a/style-2.css
+++ b/style-2.css
@@ -19,7 +19,8 @@ body {
 h1,
 h2,
 ul,
-a {
+a,
+button {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -46,6 +47,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* margin-top: 1em; */
 }
 
 header h1,
@@ -60,29 +62,27 @@ ul {
 /* ---Hero---------------------------------- */
 
 .hero-container {
-  border: 1px solid greenyellow;
-
   width: 80vw;
   margin-top: 2em;
-
   display: flex;
   justify-content: space-between;
 }
 
-.hero-call {
+.hero-text {
   display: flex;
+  flex-direction: column;
   width: 40%;
   color: var(--branco);
 }
 
-.hero-call button {
+.hero-text button {
   background-color: var(--azul-claro);
   border: none;
   font-family: "Poppins", sans-serif;
   color: var(--branco);
   width: 12em;
   height: 3em;
-  border-radius: 10%;
+  border-radius: 0.5em;
 }
 
 .image {
