--- a/style-2.css
+++ b/style-2.css
@@ -64,7 +64,7 @@ ul {
 
 .hero-container {
   width: 80vw;
-  margin-top: 2em;
+  margin: 2em;
   display: flex;
   justify-content: space-between;
 }
@@ -97,4 +97,36 @@ ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* ---Random-information------------------ */
+
+.random-container {
+  background: var(--branco);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.8em;
+  padding: 2em 0;
+}
+
+.items-container {
+  display: flex;
+}
+
+.items-container .item div {
+  border: 5px solid var(--azul-claro);
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 180px;
+  text-align: center;
+  margin: 0 2em;
 }
