--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 /* ---Hover settings--------------------- */
