Added the icons on the 'o que vamos fazer' section and added the descriptions

--- a/style.css
+++ b/style.css
@@ -153,6 +153,16 @@ button:hover {
   row-gap: 1.5em;
 }
 
+.item div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item img {
+  width: 64px;
+}
+
 /* ---Quote------------------------------ */
 
 .quote-container {
